# ScaleNyx

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci-docker.yml  ci-python.yml  ci-terraform.yml  drift-detect.yml  security.yml
devcontainer/: devcontainer.json
docker/: agent.Dockerfile  browser-pool.Dockerfile  knowledge.Dockerfile
docs/runbooks/: README.md  ci-policy-failure.md
infra/terraform/live/dev/s3/: main.tf
infra/terraform/modules/s3_bucket/: main.tf
scripts/: dev_bootstrap.sh  make_release.sh  tf_wrapper.sh
security/checkov/: .checkov.yml
security/opa/: s3.rego  s3_test.rego
services/browser-pool/src/browser_pool/: api.py  leasing.py  manager.py
services/browser-pool/tests/: test_pool.py
services/knowledge/src/knowledge/api/: main.py
services/knowledge/tests/: test_search.py
src/infra_agent/: __init__.py
src/infra_agent/api/: cli.py
src/infra_agent/core/: executor.py  observers.py  planner.py
src/infra_agent/kb_client/: retriever.py  schemas.py
src/infra_agent/memory/: episodic_store.py
src/infra_agent/tools/: aws.py  browser.py  cost.py  k8s.py  terraform.py
tests/unit/: test_cli.py  test_opa_policy.py
